objects/Snapshot_Accounts__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts_Type_A__c</fullName>
        <label>Accounts Type A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <label>Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Snapshot: Accounts</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Accounts__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Accounts_Type_A__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Snapshot: Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot: Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>